syntax = "proto3";
// 包名
package monitor;
// 生成的go文件位置及其包名
option go_package = "hanglok-tech.com/monitor-server/adapter/grpc/proto/monitor;monitor";

message TaskInfo {
    CpuStats cpu_state = 1;
    MemoryStats memory_state = 2;
    GpuStats gpu_state = 3;
}

message CpuStats {
    float usage = 1;
  }
  
message MemoryStats {
  float usage = 1;
  uint64 used = 2;
  uint64 free = 3;
}

message GpuStats {
  string cuda_version = 1;
  repeated GpuInstanceStats gpu_instance_stats = 2;
}

message GpuInstanceStats {
  string id = 1;
  string product_name = 2;
  float gpu_usage = 3;
  float memory_usage = 4;
  uint64 memory_used = 5;
  uint64 memory_free = 6;
}

message QueryAllTaskInfoReq {
  string task_id = 1;
}

message QueryAllTaskInfoRsp {
  repeated CpuInquire cpu_inquire = 1;
}

message CpuInquire {
  string time = 1;
  float cpu_percent = 2;
}

message QueryAvgTaskInfoReq {
  string task_id = 1;
}

message QueryAvgTaskInfoRsp {
  float AvgCPUPercent = 1;
  float AvgMemoryUsage = 2;
	int64 AvgMemoryUsed = 3;
	int64 AvgMemoryFree= 4 ;
}

service monitor {
    rpc QueryAllTaskInfo(QueryAllTaskInfoReq) returns (QueryAllTaskInfoRsp);
    rpc QueryAvgTaskInfo(QueryAvgTaskInfoReq) returns (QueryAvgTaskInfoRsp);
}